--- a/desafios/12/estilo/style.css
+++ b/desafios/12/estilo/style.css
@@ -63,11 +63,12 @@ section.normal {
 }
 
 section.imagem {
-    background-color: rgb(51,51,51);
+    background-color: rgb(51,51,51); /*pode retirar essa parte*/
     color: white;
     box-shadow: inset 6px 6px 13px 0px black;
-    background-size: cover;
+    background-size: cover; /*deixa a imagem menor*/
     background-attachment: fixed;
+    background-position: right center;
 }
 
 section > p {
@@ -76,7 +77,7 @@ section > p {
 
 section#img01 {
     background-image: url("../imagens/background001.jpg");
-    background-position: right center;
+    
 }
 
 section#img02 {
